Correctly aligned upload button on createRecipe

--- a/uploadRecipe/styles.css
+++ b/uploadRecipe/styles.css
@@ -1,10 +1,15 @@
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+#upload-btn {
+  position: absolute;
+  right: 268px;
 }
 
 .background_image {
-	background: url(recipe_background.jpeg);
-	background-repeat: no-repeat;
+  background: url(recipe_background.jpeg);
+  background-repeat: no-repeat;
   background-size: cover;
 }
 
